--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul>
             <li><a href="https://github.com/anastasiagubv" target="_blank">GitHub</a></li>
             <li><a href="https://www.instagram.com/anastasiagubv/" target="_blank">Instagram</a></li>
-            <li><a href="mailto:alu.anastasia.gubareva@mataro.epiaedu.cat">Contacta’m per correu</a></li>
+            <a>Contacta’m per correu: alu.anastasia.gubareva@mataro.epiaedu.cat</a></li>
         </ul>
     </section>
 
